clean structure taxaname

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-lib
-lib64
-include
-share
-bin
-dist
-OLD_build
-.vscode
 __pycache__
-OLD
+venv/
+.vscode/
+icons/
+.DS_Store
+*.pyc
+*.pyo
+api_endemia.py
+_icons.qrc
+import_csv.py
+pn_import.ui
+raster_bandvalue.py
+test.py
+test_gdal.py
