--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,6 @@
-[database]
+[postgresql]
 host = localhost
 user = postgres
 password = postgres
-database = test
+database = base_test
 
-[settings]
-theme = dark
-autosave = true
-core_diameter = 0.515
